# socioeconomic-data-mcp

./: .env.example  .gitignore  AKT_DataMCP_BuildBrief_for_ClaudeCode.md  Dockerfile  ENDPOINTS.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml  server.json
scripts/: akt_mcp_new_ip_notify.py  akt_mcp_report.py
src/socioeconomic_data_mcp/: __init__.py  __main__.py  common.py  notify.py  oauth.py  server.py
src/socioeconomic_data_mcp/providers/: __init__.py  ardeco.py  dbnomics.py  ecb.py  eurostat.py  fred.py  ilostat.py  imf.py  iweps.py  oecd.py  owid.py  sdmx.py  unsdg.py  who.py  worldbank.py
tests/: test_eurostat.py  test_providers.py
